--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ a{
 }
 /* unvisited link */
 a:link {
-    color: red;
+    color: rgb(255, 112, 112);
 }
 
 /* visited link */
@@ -42,5 +42,5 @@ a:hover {
 
 /* selected link */
 a:active {
-    color: blue;
+    color: rgb(148, 112, 220);
 }
