--- a/styles.css
+++ b/styles.css
@@ -62,22 +62,22 @@ a {
 
 
 /* unvisited link */
-a:link[href^="https://github.com"]{
+a:link[href^="https://github.com/CarlosJorgeR/"]{
   color: var(--default-font-family);
   text-decoration: underline;
-  text-decoration-color: aqua;
+  text-decoration-color: aqua !important;
   background-image: linear-gradient(aqua,aqua);
   background-position: 0vh 3.5vh;
   background-repeat: no-repeat;
 }
 
 /* mouse over link */
-a:hover[href^="https://github.com"]{
+a:hover[href^="https://github.com/CarlosJorgeR/"]{
   background-position: 0vh 0vh;
 }
 
 /* selected link */
-a:active[href^="https://github.com"]{
+a:active[href^="https://github.com/CarlosJorgeR/"]{
   color: aqua;  
   background-position: 0vh 3.5vh;
   text-decoration-color:--default-font-color;
@@ -85,10 +85,11 @@ a:active[href^="https://github.com"]{
 i{
   font-size: 3vw !important;
   color: rgb(148, 112, 220);
+  margin: 0.5vh 0.5vw ;
 }
-a:link[href^="mailto:"]>i{
+a:link>i{
   background-image: none;
 }
-a:hover[href^="mailto:"]>i{
+a:hover>i{
   color: aqua;
 }
