--- a/styles.css
+++ b/styles.css
@@ -52,12 +52,14 @@ i{
   padding-top: 5vh;
   color: rgb(148, 112, 220);
   font-family: var(--default-font-family);
+ 
 }
 
 .subtitle{
   color: var(--default-font-color);
   font-family: var(--default-font-family);
   font-size: 3vw;
+ 
 }
 .contacts{
   padding-top: 20vh;
@@ -66,9 +68,44 @@ i{
 #presentation-title{
   color: aqua;
   font-size: 5vw;
+  animation: 1s show-presentation ease;
 }
+
+@keyframes show-presentation{
+  0%{
+    color: transparent;
+    transform: translate(0px,-10px);
+  }
+ 
+}
+
 #presentation-main-skill{
+  color: transparent;
   font-size: 4vw;
+  animation-name:show-presentation-main-skill;
+  animation-timing-function:ease;
+  animation-duration: 1s;
+  animation-delay: 0.2s;
+  animation-fill-mode: forwards;
+}
+@keyframes show-presentation-main-skill{
+  0%{
+    color: transparent;
+    transform: translate(0px,-10px);
+  }
+  100%{
+    color: var(--default-font-color);
+    transform: translate(0px,0px);
+
+  }
+}
+#presentation-description{
+  color: transparent;
+  animation-name:show-presentation-main-skill;
+  animation-timing-function:ease;
+  animation-duration: 1s;
+  animation-delay: 0.4s;
+  animation-fill-mode: forwards;
 }
 
 
@@ -79,7 +116,7 @@ a:link[href^="https://github.com/CarlosJorgeR/"]{
   background-image: linear-gradient(aqua,aqua);
   background-position: 0vh 3.5vh;
   background-repeat: no-repeat;
-  transition: background-position 0.5s ease-in-out 0.1s;
+  transition: background-position 0.5s ease-in-out;
 
 }
 
@@ -97,7 +134,7 @@ a:active[href^="https://github.com/CarlosJorgeR/"]{
 
 a:link>i{
   background-image: none;
-  transition: all 0.5s ease-in-out 0.1s;
+  transition: all 0.5s ease-in-out;
 
 }
 a:hover>i{
