--- a/styles.css
+++ b/styles.css
@@ -17,20 +17,19 @@ h2,
 h3 {
   font-family: 'Raleway', sans-serif !important;
 }
-
+/* % always with the property width */
 header,
 section {
-  width: 60vw;
-  max-width: var(--max-width);
+  width: 60%;
   margin: 0 auto;
   margin-top: 20vh;
-  height: 70vh;
+  height: 60vh;
 }
 
 footer {
-  width: 60vw;
-  max-width: var(--max-width);
+  width: 60%;
   margin: 0 auto;
+  margin-bottom: 10vh;
   height: 20vh;
 }
 .footer{
@@ -39,6 +38,7 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
 }
 .footer-item{
   text-align: center;
@@ -149,7 +149,8 @@ a:link {
   color: aqua;
   text-decoration-color: aqua;
   background-image: linear-gradient(aqua, aqua);
-  background-position: 0vh 3.5vh;
+  background-size: 100% 0%;
+  background-position: 0% 100%;
   background-repeat: no-repeat;
   transition: all 0.5s ease-in-out;
 
@@ -158,7 +159,7 @@ a:link {
 /* mouse over link */
 a:hover {
   color: var(--default-font-family);
-  background-position: 0vh 0vh;
+  background-size: 100% 100%;
 }
 
 /* selected link */
@@ -166,7 +167,7 @@ a:link:has(i){
   background-image:none;
 }
 a:link>i {
-  background-position: 0vh 0vh;
+  background-size: 100% 100%;
   transition: all 0.5s ease-in-out;
 
 }
