--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   --default-font-color: rgb(148, 112, 220);
   background-color: rgb(9, 3, 15);
   font-size: 25px;
+
 }
 
 /* elements */
@@ -10,16 +11,23 @@ p {
   color: var(--default-font-color);
   font-family: var(--default-font-family);
   max-width: 650px;
+
 }
 
 h1,
 h2,
 h3 {
+  /* for guide */
+  /* border: solid 3px aqua; */
+
   font-family: 'Raleway', sans-serif !important;
 }
+
 /* % always with the property width */
 header,
 section {
+  /* for guide */
+  /* border: solid 3px aqua; */
   width: 60%;
   margin: 0 auto;
   margin-top: 5em;
@@ -28,12 +36,17 @@ section {
 }
 
 footer {
+  /* for guide */
+  /* border: solid 3px aqua; */
   width: 60%;
   margin: 0 auto;
   margin-bottom: 5em;
-  height: 15vh;
+  height: 25vh;
 }
-.footer{
+article{
+  padding: 2.5em;
+}
+.footer {
   color: var(--default-font-color);
   font-family: var(--default-font-family);
   display: flex;
@@ -41,9 +54,11 @@ footer {
   justify-content: center;
 
 }
-.footer-item{
+
+.footer-item {
   text-align: center;
 }
+
 ul {
   list-style-type: circle;
 }
@@ -78,9 +93,10 @@ i {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
+
 }
-.contacts-item{
+
+.contacts-item {
   text-align: center;
 }
 
@@ -163,9 +179,10 @@ a:hover {
 }
 
 /* selected link */
-a:link:has(i){
-  background-image:none;
+a:link:has(i) {
+  background-image: none;
 }
+
 a:link>i {
   background-size: 100% 100%;
   transition: all 0.5s ease-in-out;
@@ -175,4 +192,68 @@ a:link>i {
 a:hover>i {
   color: black;
   text-shadow: 0px 0px 15px aqua;
+}
+.br-show{
+  display: none;
+}
+@media (max-width: 1100px) {
+  :root {
+    font-size: 22px;
+  }
+  header,
+  section,
+  footer {
+    width: 75%;
+  }
+}
+
+@media (max-width: 885px) {
+  :root {
+    font-size: 15px;
+
+  }
+
+  header,
+  section,
+  footer {
+    width: 70%;
+  }
+}
+
+@media (max-width: 665px) {
+  :root {
+    font-size: 10px;
+  }
+
+  header,
+  section,
+  footer {
+    width: 80%;
+  }
+}
+@media (max-width: 340px) {
+  :root {
+    font-size: 10px;
+  }
+
+  header,
+  section,
+  footer {
+    width: 80%;
+  }
+  .br-show{
+    display:inline;
+  }
+}
+@media (min-height:700px){
+  header,
+  section {
+    height: 80vh;
+  }
+}
+@media (min-height:800px){
+  header,
+  section {
+    height: 90vh;
+  }
 }
