--- a/css/presentation-section.css
+++ b/css/presentation-section.css
@@ -1,12 +1,12 @@
 .presentation {
-    color: rgb(148, 112, 220);
+    color: var(--default-font-color);
     font-family: var(--default-font-family);
     padding: 1em;
 }
 
 #presentation-title {
     font-size: 2.6rem;
-    color: aqua;
+    color: var( --default-secundary-font-color);
     animation: 1s show-presentation ease;
 }
 
