--- a/css/presentation-section.css
+++ b/css/presentation-section.css
@@ -2,12 +2,15 @@
     color: var(--default-font-color);
     font-family: var(--default-font-family);
     padding: 1em;
+  
 }
 
 #presentation-title {
     font-size: 2.6rem;
     color: var( --default-secundary-font-color);
     animation: 1s show-presentation ease;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
 }
 
 #presentation-main-skill {
@@ -18,6 +21,8 @@
     animation-duration: 1s;
     animation-delay: 0.2s;
     animation-fill-mode: forwards;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
 }
 
 #presentation-description {
@@ -27,5 +32,7 @@
     animation-duration: 1s;
     animation-delay: 0.4s;
     animation-fill-mode: forwards;
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
 }
 
