--- a/css/navbar.css
+++ b/css/navbar.css
@@ -13,7 +13,7 @@
 
 .nav-link {
     padding: 1em;
-    color: white;
+    color: var(--default-font-color);
     text-decoration: none;
     /* background-image:none; */
     transition: all 0.5s ease-in-out;
@@ -22,11 +22,11 @@
 
 .nav-link:hover {
     background-color: rgb(36, 28, 45);
-    color: var(--default-secundary-font-color)!important
+    color: var(--default-secundary-font-color) !important
 }
 
 .nav-link:visited {
-    color: white;
+    color: var(--default-font-color);
     text-decoration: none;
     background-image: none;
 }
