--- a/css/navbar.css
+++ b/css/navbar.css
@@ -26,7 +26,7 @@
     color: var(--default-font-color);
     text-decoration: none;
     transition: all 0.5s ease-in-out;
-    
+
 }
 
 .nav-link:hover {
@@ -48,20 +48,37 @@
     display: none;
     position: fixed;
     top: 0;
-    width:100%;
-    z-index: 9999;
+    width: 100%;
+    z-index: 2;
     background-color: rgb(38, 26, 50);
 
 }
 
 .nav-header-menu {
+    position: absolute;
     padding: 0.5em;
+    z-index: 3;
+    width: 100%;
+    background-color: rgb(38, 26, 50);
 }
 
-.nav-menu {
+#nav-columnar-menu {
+    position: absolute;
     margin-top: 0;
     padding-left: 0;
-    height: 70vh;
+    height: 50vh;
+    background-color: rgb(38, 26, 50);
+    width: 100%;
+    z-index: 2;
+    top: -50vh;
+    transition: all 0.3s ease-in;
+
+}
+
+#nav-columnar-menu.active {
+    top: 1em;
+    transition: all 0.8s ease-in;
+
 }
 
 .nav-element {
